--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,6 +24,21 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
+      
       - name: Run tests
         run: |
           pytest --cov=app --cov-report=xml
+      
+      - name: SonarCloud Scan
+        env:
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+        run: |
+          # Run SonarCloud scanner
+          sonar-scanner \
+            -Dsonar.organization=HamzaBenAmmar \
+            -Dsonar.projectKey=hamzabenammar \
+            -Dsonar.sources=. \
+            -Dsonar.host.url=https://sonarcloud.io \
+            -Dsonar.login=$SONAR_TOKEN
+
+            
