--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,47 @@
-name: CI Pipeline
+# name: CI Pipeline
+
+# on:
+#   push:
+#     branches:
+#       - main
+#   pull_request:
+#     branches:
+#       - main
+
+# jobs:
+#   test:
+#     runs-on: ubuntu-latest
+#     steps:
+#       - name: Checkout the code
+#         uses: actions/checkout@v2
+
+#       - name: Set up Python
+#         uses: actions/setup-python@v2
+#         with:
+#           python-version: '3.10.11'
+          
+#       - name: Install dependencies
+#         run: |
+#           python -m pip install --upgrade pip
+#           pip install -r requirements.txt
+      
+#       - name: Run tests
+#         run: |
+#           pytest --cov=app --cov-report=xml
+  
+#       - name: SonarCloud Scan
+#         env:
+#           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+#         run: |
+#           # Run SonarCloud scanner
+#           sonar-scanner \
+#             -Dsonar.organization=HamzaBenAmmar \
+#             -Dsonar.projectKey=hamzabenammar \
+#             -Dsonar.sources=. \
+#             -Dsonar.host.url=https://sonarcloud.io \
+#             -Dsonar.login=$SONAR_TOKEN
+
+name: CI/CD Pipeline
 
 on:
   push:
@@ -12,33 +55,38 @@ jobs:
   test:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout the code
+      - name: Checkout Code
         uses: actions/checkout@v2
-
+        
       - name: Set up Python
         uses: actions/setup-python@v2
         with:
-          python-version: '3.10.11'
-          
+          python-version: 3.10  # Set the Python version you want to use
+      
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
-      
-      - name: Run tests
+          pip install -r requirements.txt  # Install dependencies from your requirements file if needed
+
+      - name: Run tests with pytest
         run: |
-          pytest --cov=app --cov-report=xml
-      
+          pytest  # Run tests directly using pytest
+
+  sonarcloud:
+    name: SonarCloud
+    runs-on: ubuntu-latest
+    needs: test  # Ensure this job runs after the tests are completed successfully
+    steps:
+      - name: Checkout Code
+        uses: actions/checkout@v2
+        
       - name: SonarCloud Scan
+        uses: SonarSource/sonarcloud-github-action@master
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        run: |
-          # Run SonarCloud scanner
-          sonar-scanner \
-            -Dsonar.organization=HamzaBenAmmar \
-            -Dsonar.projectKey=hamzabenammar \
-            -Dsonar.sources=. \
-            -Dsonar.host.url=https://sonarcloud.io \
-            -Dsonar.login=$SONAR_TOKEN
-
-            
+        with:
+          # You can provide additional configuration here if necessary
+          # but this GitHub Action will automatically configure SonarCloud
+          sonar.organization: HamzaBenAmmar  # Replace with your organization
+          sonar.projectKey: hamzabenammar  # Replace with your project key
+          sonar.sources: .  # Point to the source code directory
+          sonar.host.url: https://sonarcloud.io  # SonarCloud URL
