--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,47 +1,4 @@
-# name: CI Pipeline
-
-# on:
-#   push:
-#     branches:
-#       - main
-#   pull_request:
-#     branches:
-#       - main
-
-# jobs:
-#   test:
-#     runs-on: ubuntu-latest
-#     steps:
-#       - name: Checkout the code
-#         uses: actions/checkout@v2
-
-#       - name: Set up Python
-#         uses: actions/setup-python@v2
-#         with:
-#           python-version: '3.10.11'
-          
-#       - name: Install dependencies
-#         run: |
-#           python -m pip install --upgrade pip
-#           pip install -r requirements.txt
-      
-#       - name: Run tests
-#         run: |
-#           pytest --cov=app --cov-report=xml
-  
-#       - name: SonarCloud Scan
-#         env:
-#           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-#         run: |
-#           # Run SonarCloud scanner
-#           sonar-scanner \
-#             -Dsonar.organization=HamzaBenAmmar \
-#             -Dsonar.projectKey=hamzabenammar \
-#             -Dsonar.sources=. \
-#             -Dsonar.host.url=https://sonarcloud.io \
-#             -Dsonar.login=$SONAR_TOKEN
-
-name: CI/CD Pipeline
+name: CI Pipeline
 
 on:
   push:
@@ -55,36 +12,31 @@ jobs:
   test:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout Code
+      - name: Checkout the code
         uses: actions/checkout@v2
-        
+
       - name: Set up Python
         uses: actions/setup-python@v2
         with:
-          python-version: 3.10  # Set the Python version you want to use
-      
+          python-version: '3.10.11'
+          
       - name: Install dependencies
         run: |
-          pip install -r requirements.txt  # Install dependencies from your requirements file if needed
-
-      - name: Run tests with pytest
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+      
+      - name: Run tests
         run: |
-          pytest  # Run tests directly using pytest
-
+          pytest --cov=app --cov-report=xml
   sonarcloud:
-      name: SonarCloud
-      runs-on: ubuntu-latest
-      needs: test  # Ensure this job runs after the tests are completed successfully
-      steps:
-        - name: Checkout Code
-          uses: actions/checkout@v2
-          
-        - name: SonarCloud Scan
-          uses: SonarSource/sonarcloud-github-action@v1  # Use the latest release version of the GitHub action
-          env:
-            SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}  # Ensure your token is stored in GitHub secrets
-          with:
-            sonar.organization: HamzaBenAmmar  # Replace with your organization name
-            sonar.projectKey: hamzabenammar  # Replace with your project key
-            sonar.sources: .  # Set the directory for your code
-            sonar.host.url: https://sonarcloud.io  # SonarCloud URL
+    name: SonarCloud
+    runs-on: ubuntu-latest
+    needs: test
+    steps:
+      - uses: actions/checkout@v3
+        with:
+        fetch-depth: 0
+      - name: SonarCloud Scan
+        uses: SonarSource/sonarcloud-github-action@master
+        env:
+        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
