--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -73,28 +73,23 @@ jobs:
         run: |
           pytest --cov=app --cov-report=xml
 
+jobs:
   sonarcloud:
-    name: SonarCloud
-    runs-on: ubuntu-latest
-    needs: test
+    name: SonarCloud Analysis
+    runs-on: windows-latest  # Ensuring the runner is set to Windows
     steps:
-      - name: Checkout code again for SonarCloud analysis
-        uses: actions/checkout@v3
-        with:
-          fetch-depth: 0  # Ensure all history is fetched for SonarCloud analysis
+      - name: Checkout code
+        uses: actions/checkout@v2
 
-      - name: Set up Java 17
+      - name: Set up JDK 17
         uses: actions/setup-java@v2
         with:
-          java-version: '17'  # Install Java 17 to match SonarCloud requirements
+          java-version: '17'
+          distribution: 'adoptopenjdk'  # You can also use 'zulu' or other distributions
 
-      - name: SonarCloud Scan
-        uses: SonarSource/sonarcloud-github-action@v1  # Use stable release of the SonarCloud action
+      - name: Run SonarCloud scan
+        uses: SonarSource/sonarcloud-github-action@v1
+        with:
+          args: "-X"  # Enable full debug logging
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        with:
-          # Add SonarCloud configuration properties (ensure your project key and organization are correct)
-          sonar.organization: "HamzaBenAmmar"   # Replace with your actual organization name
-          sonar.projectKey: "hamzabenammar"      # Replace with your actual project key
-          sonar.sources: "."                      # Specify source directory
-          sonar.host.url: "https://sonarcloud.io" # SonarCloud URL
