--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,19 +31,18 @@ jobs:
 
   sonarcloud:
     name: SonarCloud Analysis
-    runs-on: ubuntu-latest  # Use ubuntu-latest for consistency with other jobs
+    runs-on: ubuntu-latest  
     needs: test
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
         with:
-          fetch-depth: 0  # Ensures the full history is available for SonarCloud analysis
-
+          fetch-depth: 0 
       - name: Set up JDK 17
         uses: actions/setup-java@v2
         with:
           java-version: '17'
-          distribution: 'temurin'  # Temurin is a widely used distribution for JDK
+          distribution: 'temurin'  
 
       - name: Run SonarCloud scan
         uses: SonarSource/sonarcloud-github-action@v1
