--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,24 +29,15 @@ jobs:
         run: |
           pytest --cov=app --cov-report=xml
 
-  sonarcloud:
-    name: SonarCloud Analysis
-    runs-on: ubuntu-latest  
-    needs: test
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-        with:
-          fetch-depth: 0 
-      - name: Set up JDK 17
-        uses: actions/setup-java@v2
-        with:
-          java-version: '17'
-          distribution: 'temurin'  
-
-      - name: Run SonarCloud scan
-        uses: SonarSource/sonarcloud-github-action@v1
-        env:
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        with:
-          args: "-Dsonar.projectKey=hamzabenammar -Dsonar.organization=HamzaBenAmmar"
+sonarcloud:
+  name: SonarCloud
+  runs-on: ubuntu-latest
+  needs: test
+  steps:
+    - uses: actions/checkout@v3
+      with:
+      fetch-depth: 0
+    - name: SonarCloud Scan
+      uses: SonarSource/sonarcloud-github-action@master
+      env:
+      SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
