--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,18 +31,14 @@ jobs:
     runs-on: ubuntu-latest
     needs: test
     steps:
-      - uses: actions/checkout@v2
+      - name: Checkout code
+        uses: actions/checkout@v4
         with:
-          fetch-depth: 0
-      - name: Setup Python
-        uses: actions/setup-python@v2
-        with:
-          python-version: ${{ matrix.python }}
-      - name: Install tox and any other packages
-        run: pip install tox
-      - name: Run tox
-        run: tox -e py
+          fetch-depth: 0  # Ensures full history for accurate SonarCloud analysis
+
       - name: SonarCloud Scan
-        uses: SonarSource/sonarcloud-github-action@master
+        uses: sonarsource/sonarcloud-github-action@v2.1.0  # Specify version for stability
+        with:
+          args: "-Dsonar.projectKey=your_project_key -Dsonar.organization=your_organization"  # Replace with actual values
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
