added Sonarqube Cloud - code analysis

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,7 +25,9 @@ jobs:
       - name: Run tests
         run: |
           pytest --cov=app --cov-report=xml
+          coverage xml
 
+          
   sonarcloud:
     name: SonarCloud
     runs-on: ubuntu-latest
