--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,11 +35,15 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0  
-
+      - name: Install tox and any other packages
+          run: pip install tox
+      - name: Run tox
+          run: tox -e py
       - name: SonarCloud Scan
         uses: sonarsource/sonarcloud-github-action@master
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+          
   security:
     runs-on: ubuntu-latest
     steps:
